<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:background="?attr/colorPrimaryContainer"
    tools:context=".edit.EditFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_edit"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/edit_save_btn"
            android:layout_gravity="end"
            android:textColor="?attr/colorPrimaryVariant"
            android:text="@string/btn_save"
            style="@style/buttons" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar_edit">

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_shape_bg"
            android:hint="@string/description"
            android:textSize="@dimen/text_size_body"
            android:lineHeight="@dimen/text_line_height_body"
            android:inputType="textMultiLine"
            android:lines="4"
            android:gravity="top"
            android:padding="12dp"
            android:textColor="@color/label_primary"
            app:layout_constraintTop_toBottomOf="@id/toolbar_edit" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/edit_change_importance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/scroll">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:text="@string/importance" />

        <TextView
            android:id="@+id/edit_importance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_importance"
            android:textColor="?attr/colorSecondary"/>

    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?attr/colorSecondary"
        app:layout_constraintTop_toBottomOf="@id/edit_change_importance"
        tools:layout_editor_absoluteX="16dp" />

    <LinearLayout
        android:id="@+id/edit_change_deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/view1">

        <Switch
            android:id="@+id/edit_switch_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_switch_deadline" />

        <TextView
            android:id="@+id/edit_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimaryVariant"/>

    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?attr/colorSecondary"
        app:layout_constraintTop_toBottomOf="@id/edit_change_deadline"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/ivDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:srcCompat="@drawable/ic_delete"
        app:tint="?attr/colorSecondary" />

    <Button
        android:id="@+id/edit_delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_delete"
        android:enabled="false"
        android:textColor="?attr/colorSecondary"
        app:layout_constraintStart_toEndOf="@id/ivDelete"
        app:layout_constraintTop_toBottomOf="@id/view2"
        style="@style/buttons"/>

</androidx.constraintlayout.widget.ConstraintLayout>