<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".todoItems.TodoItemsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryContainer">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleMarginStart="58dp"
            app:expandedTitleMarginBottom="50dp"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/title_todo_items"
            app:titleEnabled="true">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="@integer/material_motion_duration_medium_1">

                <TextView
                    android:id="@+id/tv_count"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="60dp"
                    android:gravity="center_vertical"
                    android:text="@string/count_done_tasks"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="16sp" />

            </FrameLayout>
            <Toolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom">

                <ImageButton
                    android:id="@+id/iv_visible"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="32dp"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_visibility_off" />
            </FrameLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:src="@drawable/baseline_add_24"
        app:backgroundTint="@color/color_blue"
        app:tint="@color/color_white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_todo_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/edittext_shape_bg"
        android:clipToPadding="false"
        android:paddingHorizontal="8dp"
        android:paddingBottom="12dp"
        android:scrollbarStyle="outsideOverlay"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:itemCount="4"
        tools:listitem="@layout/item_todo" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/btn_logout"
        android:textColor="?attr/colorPrimary"
        android:backgroundTint="@color/transparent"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>